--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -1,4 +1,3 @@
-index.html
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,23 +6,69 @@ index.html
 			<style>
 			.box{
 			width: 25%;
-			height: 100px;
-			padding: 5px;
-			background-color: gray;
+			height: 400px;
+			padding: 50px;
 			box-sizing: border-box;
 			float: left;
-			border: 1px solid yellow;
+			text-align: center;
+			}
+			img{
+				width: 70%;
+
 			}
 			</style>
 	</head>
 		<body>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 			<div class="box">
+				<div>
+					<img src="images/logo_desafio_latam.svg" alt="logo">
+					<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation</p>
+				</div>
 			</div>
 			<div class="box">
+				<div>
+					<img src="images/logo_desafio_latam.svg" alt="logo">
+					<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation</p>
+				</div>
 			</div>
 			<div class="box">
+				<div>
+					<img src="images/logo_desafio_latam.svg" alt="logo">
+					<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation</p>
+				</div>
 			</div>
 			<div class="box">
+				<div>
+					<img src="images/logo_desafio_latam.svg" alt="logo">
+					<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation</p>
+				</div>
 			</div>
 		</body>
 </html>
